external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_mut_4.exp
error[E02010]: invalid name
   ┌─ tests/development/enums/matching/invalid_mut_4.move:10:13
   │
10 │             mut Maybe::Nothing => (),
   │             ^^^ -------------- This refers to a variant, not a variable binding
   │             │    
   │             'mut' can only be used with variable bindings in patterns

